--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"vanevo.aternos.me",
-	"port": "25143",
+	"ip":"bhardcore.ploudos.me",
+	"port": "25565",
 	"name": "SpidermanNo",
 	"auto-night-skip":"false",
 	"login-enabled":"false",
